syntax = "proto3";
package api;

message UserMessage {
  int64 id = 1;
  string first_name = 2;
}

service User {
  rpc FindUser(UserMessage) returns (UserMessage) {}
}
